<resources>
    <string name="app_name">대한민국 명산</string>
    <string name="action_settings">Settings</string>

    <string name="MAIN_UI_SEARCH">산 찾아보기</string>
    <string name="MAIN_UI_MY">My 산</string>
    <string name="MAIN_UI_100">100대 명산</string>
    <string name="MAIN_UI_119">산불신고/구조요청</string>

    <string name="MAIN_TAB_1_MY">My 산</string>
    <string name="MAIN_TAB_2_100">100대 명산</string>
    <string name="MAIN_TAB_3_NEAR">가까운 산</string>
    <string name="MAIN_TAB_MY_NODATA">저장된 내 산이 없습니다.</string>
    <string name="MAIN_TAB_NEAR_NO_PERMISSION">앱에 위치 정보 사용 권한이 없습니다. 권한을 체크해 주세요.</string>

    <string name="MAIN_DESCRIPTION_SEARCH">찾으시는 산 이름을 입력하고 검색하세요.</string>
    <string name="MAIN_NOW_LOADING">검색 중입니다</string>
    <string name="MAIN_FAIL_INIT">DB를 초기화 하는데 실패하였습니다.</string>

    <string name="RESULT_ITEM_NAMED">100代名山</string>
    <string name="RESULT_MAPINFO">지도정보 있음</string>
    <string name="RESULT_HEIGHT">(%sM)</string>
    <string name="RESULT_MORE_INFO">더 많은 정보 검색 하기</string>
    <string name="RESULT_NO_MORE_INFO">끝 입니다.</string>
    <string name="RESULT_WEATHER_LOADING">날씨 정보 검색 중...</string>
    <string name="RESULT_WEATHER_ERROR">날씨 정보를 얻지 못했습니다.</string>
    <string name="RESULT_SUNRISE">일출시간:</string>
    <string name="RESULT_SUNSET">일몰시간:</string>

    <string name="CARD_WEATHER">날씨정보 검색하기</string>
    <string name="CARD_DETAIL">자세히 보기</string>
    <string name="CARD_SHARE">공유하기</string>
    <string name="CARD_NAMED">명산 정보 보기</string>
    <string name="CARD_ADDMY">My 산 추가</string>
    <string name="CARD_DELMY">My 산 제외</string>

    <string name="TOAST_SEARCH_NOINPUT">산 이름을 입력하세요.</string>
    <string name="TOAST_NO_RESULT">검색 결과가 없습니다.</string>
    <string name="TOAST_SEARCH_ERROR">검색중 에러가 발생하였습니다.</string>
    <string name="TOAST_NO_MY">등록한 My 산 정보가 없습니다.</string>
    <string name="TOAST_HELP_NO_PERMISSION">위치정보 관련 권한이 꺼져있어 사용이 불가합니다.\n권한 부여 후 다시 시도해 주세요.</string>
    <string name="TOAST_NO_GPS">현재 위치정보를 획득하지 못했습니다. 위치정보 기능을 켜주세요.</string>

    <string name="DETAIL_WEATHER">날씨</string>

    <string name="DETAIL_WEATHER_PRESSURE">기압: %shPa</string>
    <string name="DETAIL_WEATHER_HUMIDITY">습도: %s%%</string>
    <string name="DETAIL_WEATHER_CLOUD">구름의 양: %s%%</string>
    <string name="DETAIL_WEATHER_WIND">바람 세기: %1$sm/sec 방향: %2$d(%3$s)</string>
    <string name="DETAIL_WEATHER_TEMP">아침기온:%1$s°C 낮기온:%2$s°C 저녁기온:%3$s°C 밤기온:%4$s°C</string>
    <string name="DETAIL_WEATHER_TEMP_MINMAX">최저기온:%1$s°C 최고기온:%2$s°C</string>
    <string name="DETAIL_WEATHER_RAIN">강우량: %smm</string>
    <string name="DETAIL_WEATHER_SNOW">적설량: %smm</string>
    <string name="DETAIL_SUMMARY">개요</string>
    <string name="DETAIL_DETAIL">상세내용</string>
    <string name="DETAIL_ADMIN">연락처</string>
    <string name="DETAIL_MAP">지도정보</string>
    <string name="DETAIL_SHARE">공유</string>
    <string name="DETAIL_LAST">마지막 입니다.</string>

    <string name="NAMED_REASON">100대명산 선정이유</string>
    <string name="NAMED_OVERVIEW">개관</string>
    <string name="NAMED_DETAIL">상세정보</string>
    <string name="NAMED_TRANSPORT">교통정보</string>
    <string name="NAMED_TOURISM">주변 관광정보</string>
    <string name="NAMED_ETCCOURCE">기타 코스정보</string>

    <string name="DLG_GPSOFF_TITLE">위치정보를 얻을 수 없습니다.</string>
    <string name="DLG_GPSOFF_DESCRIPTION">위치정보를 얻기 위해 위치정보 설정 화면으로 이동 하시겠습니까?</string>
    <string name="DLG_GPSOFF_BTNNEGATIVE">사용안함</string>
    <string name="DLG_GPSOFF_BTNPOSITIVE">설정하기</string>

    <string name="MAP_MY_POINT">내위치</string>
    <string name="MAP_POINT">등산포인트</string>
    <string name="MAP_ROAD">등산로</string>

    <string name="INTENT_SHARE">명산 정보 공유</string>

    <string name="HELP_TITLE">위급 상황을\n문자메시지로 전송합니다.</string>
    <string name="HELP_DESCRIPTION">본인의 연락처 및 현재 위치정보를 포함하여\n119에 신고할 내용을 자동 완성하여 줍니다.\n\n허위,장난 신고는 법적 처벌을 받을 수 있습니다.</string>
    <string name="HELP_WARNING">허위,장난 신고는 소중한 타인의 생명을 구조하는데 지장을 줄 뿐아니라 공무집행 방해죄로 처벌될 수도 있습니다. 위급한 상황에서만 사용하세요!!\n동작을 위해서 위치정보 관련 권한이 필요합니다.</string>
    <string name="HELP_FIRE">산불 발생 신고</string>
    <string name="HELP_SAFE">구조 요청</string>
    <string name="HELP_SEARCHING">사용자의 현재 위치를 확인중입니다.\nGPS를 켜두세요.</string>

    <string name="HELP_FIRE_MESSAGE">현재위치 경위도(%1$s, %2$s), 주소(%3$s)에 산불이 발생하였습니다. 확인하여 조치 부탁드립니다.</string>
    <string name="HELP_SAFE_MESSAGE">현재위치 경위도(%1$s, %2$s), 주소(%3$s)에 조난되어 도움이 필요합니다. 연락 부탁드립니다.</string>

</resources>