<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffffff"
    android:orientation="vertical">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#009688">
        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:textColor="#ffffff"
            android:textSize="28dp" />

        <TextView
            android:id="@+id/tvHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/tvName"
            android:layout_toRightOf="@id/tvName"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="30dp"
            android:textColor="#bbdefb"
            android:textSize="14dp"/>

        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvName"
            android:layout_marginLeft="30dp"
            android:textColor="#fff9c4"
            android:textSize="14dp"/>

        <TextView
            android:id="@+id/tvSName"
            android:layout_below="@id/tvAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textColor="#e0e0e0"
            android:textSize="16dp" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#00796b" />
    
    <RelativeLayout
        android:id="@+id/rlSummary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#039be5"
        android:visibility="gone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textColor="#fff"
            android:textSize="20dp"
            android:text="@string/DETAIL_SUMMARY"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rlSummaryExpand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:visibility="gone">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#e0e0e0" />
        <TextView
            android:id="@+id/tvSummary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="20dp"
            android:textColor="#424242"
            android:textSize="14dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0288d1"
        android:visibility="gone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textColor="#fff"
            android:textSize="20dp"
            android:text="@string/DETAIL_DETAIL"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rlDetailExpand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:visibility="gone">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#e0e0e0" />
        <TextView
            android:id="@+id/tvDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="20dp"
            android:textColor="#424242"
            android:textSize="14dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlAdmin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0277bd"
        android:visibility="gone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textColor="#fff"
            android:textSize="20dp"
            android:text="@string/DETAIL_ADMIN"/>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/llAdminExpand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:orientation="vertical"
        android:visibility="gone">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#e0e0e0" />
        <TextView
            android:id="@+id/tvAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textColor="#424242"
            android:textSize="14dp"/>

        <TextView
            android:id="@+id/tvAdminNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="20dp"
            android:textColor="#424242"
            android:textSize="14dp"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rlMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#01579b"
        android:visibility="gone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textColor="#fff"
            android:textSize="20dp"
            android:text="@string/DETAIL_MAP"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlLast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#b3e5fc"
        android:visibility="visible">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textColor="#000"
            android:textSize="16dp"
            android:text="@string/DETAIL_LAST"/>
    </RelativeLayout>

</LinearLayout>